Update contact information and footer year

--- a/index.html
+++ b/index.html
@@ -1841,7 +1841,7 @@
             </a>
             <ul class="nav-links">
                 <li><a href="#home">Inicio</a></li>
-                <li><a href="#gallery">Galería</a></li>
+                <li><a href="#gallery">Aula virtual</a></li>
                 <li><a href="#services">Servicios</a></li>
                 <li><a href="#courses">Cursos</a></li>
                 <li><a href="#products">Productos</a></li>
@@ -2163,7 +2163,7 @@
                         </div>
                         <div class="contact-details">
                             <h3>Email</h3>
-                            <p>info@noda.tech</p>
+                            <p>Noda@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -2242,12 +2242,12 @@
                     <h3>Contacto</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Av. Tecnología 1234</p>
                     <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
-                    <p><i class="fas fa-envelope"></i> info@noda.tech</p>
+                    <p><i class="fas fa-envelope"></i> Noda@gmail.com</p>
                     <p><i class="fas fa-clock"></i> Lun-Vie: 9:00 AM - 6:00 PM</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Noda - Todos los derechos reservados | Desarrollado con <i class="fas fa-heart" style="color: var(--accent-color);"></i> por Noda Tech</p>
+                <p>&copy; 2025 Noda - Todos los derechos reservados | Desarrollado con <i class="fas fa-heart" style="color: var(--accent-color);"></i> por Noda</p>
             </div>
         </div>
     </footer>
